embed youtube clip

--- a/content/welcome-to-coding.Rmd
+++ b/content/welcome-to-coding.Rmd
@@ -9,7 +9,8 @@ source("../tools/chunk-options.R")
 
 <!--sec data-title="Learning Objectives" data-id="obj" data-show=true data-collapse=false ces-->
 
-* to fill in later
+* To understand why learning to code is valuable
+* To learn what the word programming means
 
 <!--endsec-->
 
@@ -25,15 +26,20 @@ source("../tools/chunk-options.R")
 
 ---
 
-## Introduction
+## Why learn to code? 
 
-Why learn to code? Coding is amazing 
-Very powerful tool
+Coding is a very powerful tool
 Fast reproducibility - have you ever tried to re-analyse your data in excel - my masters experience
 Publication quality graphics
 These slides were written in R using RMarkdown
 Like any skill, coding takes a while to learn to do well - don’t be discouraged, because it will set you up for life
 My aim for this session is to introduce you to some of the programming lingo, including the building blocks of coding - data structures and basic concepts. We will spend the first hour learning about them and then in the second hour you will get to explore them yourselves using scratch (which I will tell you about then). By the end of these couple of hours, you should be ready to take a beginner course in any programming language
+
+<!--sec data-tite="Why learn to code? (YouTube)" data-id="obj" data-show=true data-collapse=true ces-->
+
+{%youtube%}nKIu9yen5nc{%endyoutube%}
+
+<!--endsec-->
 
 So I guess the first question that we need to ask, is what is programming? Can anyone answer that for me? *pick on table if there are no responses* Writing instructions for your computer. Much like when you go away on holiday and have a house sitter you leave them instructions, such as please water the plants twice a week, dog gets fed in the evening and walked in the morning, help yourself to anything in the fridge, my emergency contact details are blah, the local vet is located two houses down the street. In this case you are the programmer and the house sitter is the computer taking instructions.
 When programming, you need to give the computer instructions in a language that it understands. Much like having a pet dog. What sort of instructions could you give a dog and expect it to understand? *wait* Things like sit, stay, roll over, walk. Even the most well trained dog probably does not understand: do you think my butt looks big in this or what do you think of the current situation in Europe. That is well outside of the dog’s understanding of both the English language and general concepts 
