--- a/content/welcome-to-coding.Rmd
+++ b/content/welcome-to-coding.Rmd
@@ -31,9 +31,9 @@ source("../tools/chunk-options.R")
 Apple's co-founder Steve Jobs once said: 
 > "I think everybody in this country should learn how to program a computer because it teaches you how to think"
 
-<br> 
-
 Coding is a very powerful tool (especially for researchers)! Have you ever tried to re-analyse your data in Microsoft Excel, only to realise that you can't remember how you analysed it last time? Then begrudged how labour-intensive the re-analysis turned out to be? Or struggled through trying to customise an analysis or plot? If you answered yes to any of these questions, then programming (the words programming and coding will be used interchangeably in this book) may be the answer to your research woes. Programming allows you to easily and quickly reproduce results and figures... **publication quality** figures.
+
+<br>
 
 <!--sec data-title="Tip: Other uses for programming" data-id="tip1" data-show=true data-collapse=true ces-->
 
@@ -49,21 +49,31 @@ Some other fun things that programming can be used for (this list is in no way e
 
 Like any skill, coding takes a while to learn if you want to do it well. Don’t be discouraged, because it will set you up for life. Much like learning to ride a bicycle or learning a foreign language, the hardest part is the initial learning curve. The aim of this book is to ease you into some of the generic programming lingo. You should then be set to take an introductory course in any programming language.
 
+<br>
+
 <!--sec data-title="Stories of learning to code (YouTube)" data-id="vid1" data-show=true data-collapse=true ces-->
 
 {%youtube%}nKIu9yen5nc{%endyoutube%}
 
 <!--endsec-->
-
+ 
+ <br>
+ 
+ ---
+ 
 ## What is programming?
 
 The first question that we need to ask is: what is programming? Is it magic that requires eye of newt and tongue of toad? Hopefully, you answered no to that last question. Programming is essentially writing instructions for your computer. Much like when you go away on holiday and have a house sitter you leave them instructions, such as: please water the plants twice a week, walk the dog in the morning, feed the dog in the evening, and help yourself to anything in the fridge. In this case you are the programmer and the house sitter is the computer taking instructions.
+
+<br>
+
+---
 
 ## Programming languages
 
 Unfortunately, computers don't understand human languages, e.g. English. When programming, you need to give the computer instructions in a language that it understands. This is much the same as talking to a pet dog. You expect the dog to understand 'sit', 'stay' and 'walk'. But even the most well-trained dog probably does not understand: "do you think my butt looks big in this?" or "what do you think of the current situation in Europe?". That is well outside of the dog’s understanding of both the English language and general concepts.
 
-![picture of dog](fig/Olage_dogs_-_on_wheel.jpeg "This dog will not discuss politics with you")
+![This dog will not discuss politics with you](fig/Olage_dogs_-_on_wheel.jpeg)
 
 Your computer understands many programming languages. Here are a few that you might have heard of:
 * R
@@ -73,6 +83,10 @@ Your computer understands many programming languages. Here are a few that you mi
 * Java
 * Ruby
 * Julia
+
+<br>
+
+---
 
 ## The building blocks of programming
 
