fix image rendering

--- a/content/welcome-to-coding.Rmd
+++ b/content/welcome-to-coding.Rmd
@@ -47,6 +47,8 @@ Some other fun things that programming can be used for (this list is in no way e
 
 <!--endsec-->
 
+<br>
+
 Like any skill, coding takes a while to learn if you want to do it well. Don’t be discouraged, because it will set you up for life. Much like learning to ride a bicycle or learning a foreign language, the hardest part is the initial learning curve. The aim of this book is to ease you into some of the generic programming lingo. You should then be set to take an introductory course in any programming language.
 
 <br>
@@ -73,7 +75,7 @@ The first question that we need to ask is: what is programming? Is it magic that
 
 Unfortunately, computers don't understand human languages, e.g. English. When programming, you need to give the computer instructions in a language that it understands. This is much the same as talking to a pet dog. You expect the dog to understand 'sit', 'stay' and 'walk'. But even the most well-trained dog probably does not understand: "do you think my butt looks big in this?" or "what do you think of the current situation in Europe?". That is well outside of the dog’s understanding of both the English language and general concepts.
 
-![This dog will not discuss politics with you](fig/Olage_dogs_-_on_wheel.jpeg)
+![This dog will not discuss politics with you](../fig/Olage_dogs_-_on_wheel.jpeg)
 
 Your computer understands many programming languages. Here are a few that you might have heard of:
 * R
@@ -83,6 +85,8 @@ Your computer understands many programming languages. Here are a few that you mi
 * Java
 * Ruby
 * Julia
+
+This course will have an R-flavour to it.
 
 <br>
 
