create content for content/variables.md

--- a/content/variables.Rmd
+++ b/content/variables.Rmd
@@ -5,11 +5,12 @@ output: md_document
 source("../tools/chunk-options.R")
 ```
 
-# Data types
+# Variables
 
 <!--sec data-title="Learning Objectives" data-id="obj" data-show=true data-collapse=false ces-->
 
-* to fill in later
+* to understand the need to name objects in programming
+* to be comfortable with the term 'variable'
 
 <!--endsec-->
 
@@ -25,13 +26,78 @@ source("../tools/chunk-options.R")
 
 ---
 
-## Introduction
+## Naming variables
 
-The first thing to realise about programming, is that if you want the computer to remember something, you need to give it a name. You could just use your computer as a calculator, and type 1 + 1, which will return 2, but if you didn’t give it a name, then as soon as the computer has calculated the answer for you, it has already forgotten about it. It would be like talking to someone with amnesia, or for those of you with a disney/pixar interest, like talking to Dory. You would say ‘What is 1+1?’, the computer responds with ‘2’, then you would say what was the result of the last sum I gave you and the computer would say ‘what sum’?
-So let’s have a go at naming things. Can someone give me a name for this abstract object? How about naming this baby? By giving them a name, you have made them into variables, which we can now remember. In the same way, if you name things when programming, your computer can store them in memory and access them later by that name. 
-The contents of the variable can change, but the name stays the same. Much like *insert baby name here* will look different as she grows up, but (unless she goes through legal channels to change it) her name will always be ...
-It’s important to note that if you start using a name that you haven’t introduced the computer to yet, the computer will get confused and return an error. Much like if I start talking to you about flickledutts. “Flickledutts is awesome, don’t you think so?” You’re probably now wondering what I’m talking about. What do you think flickledutts is? *wait* But if I tell you that flickledutts is a new board game, confusion gone. 
-So we create variables that the computer can store in its memory by giving them names and we need to define variables before we refer to them in our code
-Here are a couple of example in R of creating variables. The name of the variable is on the left and the value of the variable on the right, with this left hand arrow meaning assign. So this first line says create a variable called baby and assign it the value Meredith. And the second line says create a variable called sculpture and assign it the value 10
+The first thing to realise about programming is: if you want the computer to remember something, you need to give it a name. Otherwise, your computer is just acting as a glorified calculator. If you type `1 + 1`, the computer will return `2`. But if you didn’t give it a name, then as soon as the computer has calculated the answer for you, it has already forgotten about it. 
+
+This is like talking to someone with amnesia... 
+> You: ‘Meet my friend, Fred’
+> Computer: 'Hi Fred!'
+> You: 'What is my friend's name?'
+> Computer: 'What friend?'
+
+<br>
+
+<!--sec data-title="Challenge 1" data-id="ch1" data-show=true data-collapse=false ces-->
+
+Let’s have a go at naming things! 
+
+A. What would you name this abstract object?
+<figure align="middle">
+  <img src="../fig/Abstract_art_(PSF).png" alt="Abstract art" align="middle" style="width: 500px;"/>
+</figure>
+
+B. Give this baby a name
+<figure align="middle">
+  <img src="../fig/pexels-photo.jpg" alt="This dog will not discuss politics with you" align="middle" style="width: 500px;"/>
+</figure>
+
+<!--endsec-->
+
+<br>
+
+By giving these images a name, you have made them into **variables**. You can remember these variables by their names and refer to them later. In the same way, if you name things when programming, your computer can store them in memory and also access them later by that name. 
+
+We can change the contents of a variable, but the name will stay the same. Much like how the baby pictured in Challenge 1 will look different as she grows up, but (unless she goes through legal channels to change it) her name will always stay the same.
+
+<br>
+
+---
+
+## Don't refer to a variable before it has been named
+
+It’s important that you don't start using names before you introduce your computer to them. Much like if a friend started talking to you about flickledutts: 
+> “Flickledutts is awesome, don’t you think so?”
+
+You would probably be wondering what it is that they're talking about and whether you need to call for some psychiatric help. However, if they prefaced their question with a description of this new game that they've just discovered called flickledutts, you would be more likely to roll your eyes and wait out the enthusiastic tirade.
+
+<br>
+
+---
+
+## A coding example
+
+<!--sec data-title="Take home messages" data-id="takehome" data-show=true data-collapse=false ces-->
+
+* We create variables that the computer can store in its memory by giving them names 
+* We need to define these variables before referring to them in our code
+
+<!--endsec-->
+
+<br>
+
+Here are a couple of example of creating variables in R. The name of the variable is on the left and the value of the variable on the right. The left arrow means assign the value on the right to the variable name on the left. 
+
+```{r}
+baby <- 'Meredith'
+```
+
+This first line of code says: create a variable called baby and assign it the value 'Meredith'.
+
+```{r}
+sculpture <- 10
+```
+
+The second line of code says: create a variable called sculpture and assign it the value 10. These variables are now stored in the computer's memory and can be referred to later.
 
 
