--- a/content/data-types.Rmd
+++ b/content/data-types.Rmd
@@ -7,9 +7,9 @@ source("../tools/chunk-options.R")
 
 # Data types
 
-<!--sec data-title="Learning Objectives" data-id="obj" data-show=true data-collapse=false ces-->
+<!--sec data-title="Learning Objective" data-id="obj" data-show=true data-collapse=false ces-->
 
-* to fill in later
+* to recognise that there are 3 different data types that the computer understands: numbers, logicals and character strings
 
 <!--endsec-->
 
@@ -25,12 +25,71 @@ source("../tools/chunk-options.R")
 
 ---
 
-## Introduction
+## Data types
 
 
-So now we know about variables, what sort of information can we store in them? In spoken language we have nouns, verbs, adverbs, etc. In programming we can use numbers, logical values and character strings. 
-Numbers can be whole numbers (integers) such as 1, 2, 3, they can be doubles with decimal point values 1.25 or they can be complex numbers with imaginary components 3 + 2i.
-Logical values, also known as Boolean values, can be either TRUE or FALSE. This is useful when comparing data
-Character strings are made up of letters and special characters and are generally surrounded by quotation marks. Here we have research and platforms as two separate character strings
-On each table you have red, yellow and blue pieces of paper. On one side it tells you what data type it is. I want you to write appropriate examples on the other side of the paper. One example per piece of paper. So the red paper is numeric, you could put the number 2 on the back. The yellow paper is logical, so you can put either true or false on each page and the blue paper is for character strings, so you can write whatever you want on these and surround it with quotation marks. You have 5 minutes to do this.
+We now know about variables: to store something in the computer's memory, we need to name it. What type of information can we store? In spoken language we have nouns, verbs, adverbs, etc. In programming we can use numbers, logicals and character strings. 
+<br>
 
+---
+
+## Numbers
+
+Numbers can be:
+* integers or whole numbers, such as `1`, `2`, `3`
+* doubles with decimal point values, such as `1.25`, `3.75`
+* complex with imaginary components such as `3 + 2i`, `9 + 6i`
+
+<br>
+
+---
+
+## Logicals
+
+Logicals, also known as Booleans, have two possible values:
+* `TRUE`
+* `FALSE`
+
+Logicals are useful when comparing data.
+
+<br>
+
+---
+
+## Character strings
+
+Character strings are made up of letters, numbers and special characters and are generally surrounded by quotation marks. Here we have Research and Platforms as two separate character strings: `"Research", "Platrforms"`.
+
+<br>
+
+<!--sec data-title="Challenge 1" data-id="ch1" data-show=true data-collapse=false ces-->
+
+What data type is each of the following?
+
+A. `2`
+
+B. `"fig"`
+
+C. `TRUE`
+
+D. `"2.5"`
+
+<!--endsec-->
+
+<br>
+
+---
+
+## Challenge solutions
+
+<!--sec data-title="Solution to Challenge 1" data-id="ch1sol" data-show=true data-collapse=true ces-->
+
+A. number
+
+B. character string
+
+C. logical
+
+D. character string (this one is a bit tricky - by placing the number in quotation marks, we have converted it from a number to a character string)
+
+<!--endsec-->
