--- a/content/welcome-to-coding.Rmd
+++ b/content/welcome-to-coding.Rmd
@@ -43,6 +43,7 @@ Some other fun things that programming can be used for (this list is in no way e
 * mobile app creation
 * making robots
 * cracking codes
+* writing this book
 * world domination (think outside the box)
 
 <!--endsec-->
