--- a/content/data-structures.Rmd
+++ b/content/data-structures.Rmd
@@ -6,11 +6,15 @@ output: md_document
 source("../tools/chunk-options.R")
 ```
 
-# Data types
+# Data structures
 
-<!--sec data-title="Learning Objectives" data-id="obj" data-show=true data-collapse=false ces-->
+<!--sec data-title="Learning Objective" data-id="obj" data-show=true data-collapse=false ces-->
 
-* to fill in later
+* to become familiar with four different data structures:
+  * vectors
+  * matrices
+  * lists
+  * dictionaries
 
 <!--endsec-->
 
@@ -28,14 +32,220 @@ source("../tools/chunk-options.R")
 
 ## Introduction
 
-Now that we have our data types - numeric, logical and character strings - what sort of data structures can we create? In spoken language we make sentences, paragraphs, essays. In programming, we have vectors, matrices, lists and dictionaries. Let’s go through these one-by-one.
-Vectors or tuples (the terminology changes depending on the programming language that you use) are ordered groups of variables of a single data type. Now when I say ordered, I don’t necessarily mean in ascending or descending order, just that the order matters. Let’s create a vector of people. Can I get table *x* to stand up and come up the front and stand in a line. This is a vector with *x* number of elements. We’re going to number the vector from left to right, as I call your element number please tell everyone your name. 1,2,.... Now let’s create a new vector by ordering in height order. Now in alphabetical order. Great work, you can sit down now.
-So let’s have a go at doing the same things but instead of using people as the elements that make up our vector, let’s use the data types that the computer can understand. Each table needs to make 3 vectors using the coloured paper on the tables. One logical vector, one numeric and one character vector. These can be of any length that you like. Don’t forget that order matters. You have 2 minutes to do this one. Can table *x* give me their numeric vector? Table *y* give me their logical vector and table “z” give me their character vector? Great work. Here is an example of creating a couple of vectors in R. The first vector is very imaginatively called vector 1 and have the values 1:10 stored in it. The second vector, called vector 2, has the character strings learning to code is fun. 
-So now we have vectors. You might have noticed that they are 1-D. What if we have a table of values with rows and columns? We can store 2dimensional data using a matrix. Data frame or array. Again the terminology changes based on the programming language that you are using. So to explain matrices, can I get table *x* to come up the front and help me. We want a matrix with 2 rows and 3 columns. Can you arrange yourself like that? Now I want a matrix with 3 row and 2 columns. Instead of referring to you by name, I could now refer to you by your row and column number. So if row 1 is the back and row 2 is the front, while column 1 is the left hand column and column 3 is the right… raise your hand element in row 1 column 2. Row 2 column 3. Row 5 column 2. You have to be careful when using data structures that the element that you are referring to actually exists.
-Now let’s create matrices using the data types the computer can understand. Each table should make a single matrix. Your matrix can only contain one data type, so I shouldn’t see any multi-coloured matrices. You have 2 minutes. Table *x* can you describe your matrix for us? What data type, how many rows and how many columns? Table *y*?
-Here is some example R code. Data frames are data structures unique to R, so I have used that for my example. In ResBaz we are broken up into four different platoons, which each platoon having a lead. I have represented that here by creating a variable called platoon leads, which is a data frame with 2 columns called platoon and name and four rows, where each row represents a different platoon.
-So we’ve seen vectors and matrices, but what if we want to store different data types (numeric, logical and character strings) together in the one data structure? And what if we don’t have the same number of elements in each of the different groups? We have 2 numbers, 1 logical and 5 character strings. This is where lists or structures come into the picture. Here I have a picture of a collection of musical instruments, with many more wind instruments than string instruments. I could represent this as a list with 2 elements, one element would be a vector of string instruments and the other a vector of wind instruments. Can I get table *x* to come up the front and help me to give an example of lists. I want two elements, one containing a vector of males and one containing a vector of females. And now I want to create a list with each element representing a different hair colour. Great you can sit down now. Now I want each table to create an example of a list using data types that the computer understands. Each element of your list can contain either a single variable, a vector or a matrix. You have 2 minutes. Table *x* can you describe your list to me. How many elements and what does each contain? Table *y*?
-I have an example of a shopping list, that I have broken down according to meal, where the number of items is different for each meal, so I have stored it as a list. I have called the variable shoppinglist. 
-We’ve looked at vectors, matrices and lists. The final data structure we will look at, which is unique to the python programming language is dictionaries. Dictionaries contain pairs of variables, values and keys. When we created vectors, we could look up the element by its number in the vector. In contrast dictionaries are unordered and you look up elements by their key. Much like opening a dictionary, where the word is the key and the definition is the value. It’s important that each key is unique. It would be difficult to look up the meaning of a word in the dictionary if the word were repeated multiple times with completely different meanings each time. The keys must all be the same data types and the values must be the same data type, but the data type of the keys can be different to the data type of the values. For examples, the keys may be numbers and the values vectors or tuples. Have a go at creating a dictionary by pairing up keys and values using the data types on your table. You have 3 minutes. Table *x*? Table *y*? Here is an example of a dictionary written in python. I have called it IMDBRatings. The keys are character strings: game of thrones, sherlock, firefly, friends and the values are numeric values that represent the average rating of those tv shows on IMDB
+Now that we have our data types - numbers, logicals and character strings - what sort of data structures can we create? In spoken language we make sentences, paragraphs and essays. In programming, we have vectors, matrices, lists and dictionaries. 
+
+<br>
+
+---
+
+## Vectors or tuples
+
+Vectors or tuples (the terminology changes depending on the programming language that you use) are ordered groups of variables of a single data type. Ordered doesn't necessarily mean in ascending or descending order, just that the order matters. The vector of numbers `1`, `2`, `3` is different to the vector of numbers `2`, `3`, `1`. You can think of a vector as a queue of data.
+
+The elements of a vector can be referred to by their position in the vector. For the vector of numbers `2`, `3`, `1`: the first element of the vector is the number 2, the second element is the number 3 and the third element is the number 1.
+
+<br>
+
+<!--sec data-title="Challenge 1" data-id="ch1" data-show=true data-collapse=false ces-->
+
+For the vector containing the character strings `"I"`, `"love"`, `"programming"`, `"in"`, `"R"`, what is the value of the:
+
+A. first element?
+
+B. second element?
+
+C. fifth element?
+
+<!--endsec-->
+
+<br>
+
+<!--sec data-title="Tip: Don't refer to positions in a vector that don't exist!" data-id="tip1" data-show=true data-collapse=true ces-->
+
+When referring to elements of a vector, it is important to make sure that the element actually exists. If you have a vector of 5 elements and try to refer to the sixth element, your computer is likely to give you some unexpected behaviour.
+
+<!--endsec-->
+
+<br>
+
+Here is an example a vector written in R. The vector is named `my_first_vector` and contains the character strings: `"learning"`, `"to"`, `"code"`, `"is"`, `"fun"`.
+
+```{r}
+my_first_vector <- c("learning", "to", "code", "is", "fun")
+
+my_first_vector
+```
+
+<br>
+
+--- 
+
+## Matrices or arrays 
+
+You might have noticed that vectors are one-dimensional. What if we have a table of values with rows and columns? We can store two-dimensional data using a matrix, data frame or array. Again the terminology changes depending on the programming language that you are using. 
+
+Like vectors, a matrix is an ordered collection of a single data type (number, logical or character string). You can think of matrices like grids. Elements of a matrix can be referred to by their row and column number.
+
+<br>
+
+<!--sec data-title="Challenge 2" data-id="ch2" data-show=true data-collapse=false ces-->
+
+```{r, echo = FALSE}
+matrix(1:12, nrow=3, byrow=TRUE)
+```
+
+For the above 3 x 4 matrix (3 rows x 4 columns), name the element of the matrix in the following positions:
+
+A. Row 1, Column 1
+
+B. Row 3, Column 2
+
+C. Row 2, Column 4
+
+D. Row 4, Column 3
+
+<!--endsec-->
+
+Here is an example of a matrix written in R. The matrix is named `PlatoonLeads`. In ResBaz we are broken up into three different platoons, each with its own lead. The `PlatoonLeads` matrix contains 2 columns (platoon and name) and 4 rows, each representing a different platoon. 
+
+```{r}
+PlatoonLeads <- matrix(
+  c("Data Wranglers", 
+    "Data Miners", 
+    "Data Vizards", 
+    "Cadventurers", 
+    "Kerry Halupka", 
+    "Kim Doyle", 
+    "Isabell Kiral-Kornek", 
+    "Louise van der Werff"), 
+  ncol=2, # specifies the number of columns
+  dimnames=list(NULL,c("platoon","name"))) # specifies the names of the columns
+
+PlatoonLeads
+```
 
 
+<br>
+
+---
+
+## Lists, structures or data frames
+
+So far, the data structures that we have seen have only been able to store data of a single data type (number, logical or character string). What if we want to store multiple data types in the one data structure? In fact, what if we want to store different numbers of the different data types, e.g. 2 numbers, 1 logical and 5 character strings. This is where lists or structures come into the picture. Each element of a list can contain either a single variable, a vector, a matrix or another list. 
+
+
+<br>
+
+<!--sec data-title="Tip: Data frames are a special type of list" data-id="tip1" data-show=true data-collapse=true ces-->
+
+Data frames are a special type of list that is unique to R. Data frames act like matrices in that they are broken up into rows and columns, but each column can hold a different data type.
+
+<!--endsec-->
+
+<br>
+
+
+<!--sec data-title="Challenge 3" data-id="ch3" data-show=true data-collapse=false ces-->
+
+```{r, echo=FALSE}
+list(1, c(1:10), c("third","element"),matrix(T,F,T,F,ncol=2))
+```
+
+What data type and data structure is each element of the above list?
+
+<!--endsec-->
+
+<br>
+
+Here is an example of a shopping list written in R. The list is broken down according to meal and also includes how much money is currently in my wallet. The variable is named `shoppingList`. 
+
+```{r}
+shoppingList <- list(
+  breakfast     = c("cereal", "milk", "orange juice", "banana"),
+  lunch         = c("bread", "cheese", "tomato"),
+  dinner        = c("frozen pizza", "chocolate mousse"),
+  moneyInWallet = 40.50
+)
+
+shoppingList
+```
+
+<br>
+
+---
+
+## Dictionaries
+
+The final data structure we will look at is dictionaries. Dictionaries are unique to the Python programming language and contain pairs of variables: values and keys. When we created vectors, we could refer to an element by its number in the vector. In contrast dictionaries are unordered and you look up elements by their key. Much like opening a dictionary, where the word is the key and the definition is the value. 
+
+<br>
+
+<!--sec data-title="Tip: Keys must be unique values" data-id="tip3" data-show=true data-collapse=true ces-->
+
+It’s important that each key is unique. It would be difficult to look up the meaning of a word in the dictionary if the word were repeated multiple times with completely different meanings each time!
+
+<!--endsec-->
+
+<br>
+
+The keys must all be the same data types and the values must be the same data type, but the data type of the keys can be different to the data type of the values. E.g. The keys may be numbers and the values vectors or tuples. 
+
+<br>
+
+<!--sec data-title="Challenge 4" data-id="ch4" data-show=true data-collapse=false ces-->
+
+Think of an example of a dictionary. Remember that the keys must be all the same data type and the values must be of the same data type, but the data type of the keys and values can be different.
+
+<!--endsec-->
+
+Here is an example of a dictionary written in Python. The dictionary is named `IMDBRatings`. The keys are character strings: `"Game of Thrones"`, `"Sherlock"`, `"Firefly"` and `"Friends"` and the values are numeric values that represent the average rating of those tv shows on IMDB
+
+```{python}
+IMDBRatings = {"Game of Thrones": 9.4, 
+    "Sherlock": 9.2, 
+    "Firefly": 9.1, 
+    "Friends": 8.9}
+
+for movie, rating in IMDBRatings.items():
+    print movie + ': ' + str(rating)
+```
+
+<br>
+
+---
+
+## Challenge solutions
+
+<!--sec data-title="Solution to Challenge 1" data-id="ch1sol" data-show=true data-collapse=true ces-->
+
+A. "I"
+
+B. "love"
+
+C. "R"
+
+<!--endsec-->
+
+<!--sec data-title="Solution to Challenge 2" data-id="ch2sol" data-show=true data-collapse=true ces-->
+
+A. 1
+
+B. 10
+
+C. 8
+
+D. The at Row number 4 and Column number 3 doesn't exist, since there are only 3 rows in the matrix!
+
+<!--endsec-->
+
+<!--sec data-title="Solution to Challenge 3" data-id="ch3sol" data-show=true data-collapse=true ces-->
+
+Element 1: a single numeric variable
+
+Element 2: a numeric vector
+
+Element 3: a character string vector
+
+Element 4: a logical matrix
+
+<!--endsec-->/
