--- a/content/info-for-instructors.Rmd
+++ b/content/info-for-instructors.Rmd
@@ -29,9 +29,10 @@ source("../tools/chunk-options.R")
 
 ## Slide presentation
 
-There are two slide presentations that can be used to present this materials:
-* [Shiny presentation](Intro_slides.Rmd)
-* [HTML presentation](Intro_slides_NOTSHINY.html)
+There are two slide presentations that can be used to present this material:
+
+* [Shiny presentation](../Intro_slides.Rmd)
+* [HTML presentation](../Intro_slides_NOTSHINY.html)
 
 The HTML presentation can be run in any browser. The Shiny presentation needs to be run through RStudio (open the document in RStudio and click run presentation - make sure that shiny has been installed). The Shiny presentation has interactive sections for the slides on conditionals and functions. 
 
@@ -44,7 +45,7 @@ The HTML presentation can be run in any browser. The Shiny presentation needs to
 This can be a really fun course to run. Here are some examples of interactive activities that you can use:
 
 * Split the attendees into teams and get them to come up with team names. Use these team names throughout the workshop when asking for volunteers
-* To illustrate the different data types, Print out squares of coloured paper (use a different colour for each data type) and get attendees to fill in examples of the appropriate data type for each square. Here is a [template](data types - print on coloured paper.docx)
+* To illustrate the different data types, Print out squares of coloured paper (use a different colour for each data type) and get attendees to fill in examples of the appropriate data type for each square. Here is a [template](../data types - print on coloured paper.docx)
 * Ask attendees to use the coloured paper data types to create examples of data structures
 * Create data structures of people. Get a team to come up to the front and demonstrate a vector/matrix/list of people
 * When discussing conditionals, get attendees to play 'Simon Says'
